tests/paczka2/big_fuzzy/38960415.err
Error in line 5: DIK A118 40,8
Error in line 8: nuWLBGF5 A118 49,0
Error in line 9: nuWLBGF5 A473 44,8
Error in line 15: nuWLBGF5 A356 74,8
Error in line 21: A356 A118 47,9
Error in line 25: aUVT05l A356 44,7
Error in line 28: aUVT05l A473 56,9
Error in line 41: A356 A118 66,4
Error in line 46: DIK A356 98,5
Error in line 35: Pcz A473 144,8
Error in line 58: wgaXcu8v A368 31,7
Error in line 54: aUVT05l A368 105,3
Error in line 77: Pcz A118 65,0
Error in line 80: DIK A473 53,1
Error in line 84: DIK A356 71,3
Error in line 75: aUVT05l A356 131,0
Error in line 91: nuWLBGF5 A118 32,3
Error in line 97: aUVT05l A356 42,2
Error in line 98: nuWLBGF5 A473 90,1
Error in line 103: wgaXcu8v A118 10,5
Error in line 112: g6yZQ1 A118 5,2
Error in line 117: g6yZQ1 A473 86,2
Error in line 87: DIK A473 31,8
Error in line 128: aUVT05l A473 30,1
Error in line 135: g6yZQ1 A368 159,6
Error in line 146: aUVT05l A356 -1,5
Error in line 159: A356 A368 43,76
Error in line 161: nuWLBGF5 A368 78,4
Error in line 165: wgaXcu8v A118 47,0
Error in line 130: aUVT05l A356 24,1
Error in line 176: aUVT05l A118 26,2
Error in line 178: aUVT05l A356 64,8
Error in line 189: A356 A356 37,7
Error in line 195: Pcz A356 28,6
Error in line 183: g6yZQ1 A473 89,5
Error in line 196: A356 A473 29,7
Error in line 204: wgaXcu8v A356 53,7
Error in line 216: A356 A118 37,3
Error in line 219: A356 A356 2,08
Error in line 217: A356 A356 23,6
Error in line 222: wgaXcu8v A368 109,7
Error in line 218: DIK A118 6,0
Error in line 243: DIK A368 53,23
